--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build:serv": "webpack serve --env mode=development --env port=5000 --config webpack.config.ts",
     "build:prod": "webpack --env mode=production --config webpack.config.ts",
     "build:dev": "webpack --env mode=development --config webpack.config.ts",
+    "lint": "eslint \"**/*.{ts,tsx}\"",
+    "lint:fix": "eslint \"**/*.{ts,tsx}\" --fix",
     "start": "npm run build:serv",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,10 +26,13 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
     "babel-loader": "^8.2.3",
     "babel-plugin-i18next-extract": "^0.8.3",
     "css-loader": "^6.6.0",
     "eslint": "^8.10.0",
+    "eslint-config-airbnb": "^19.0.4",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
