--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build:serv": "webpack serve --env mode=development --env port=5000 --config webpack.config.ts",
     "build:prod": "webpack --env mode=production --config webpack.config.ts",
     "build:dev": "webpack --env mode=development --config webpack.config.ts",
+    "build:prod:analyze": "webpack --env analyze=1 --env mode=production --config webpack.config.ts",
+    "build:dev:analyze": "webpack --env analyze=1 --env mode=development --config webpack.config.ts",
     "lint:ts": "eslint \"**/*.{ts,tsx}\"",
     "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
     "lint:scss": "npx stylelint \"**/*.scss\"",
@@ -29,6 +31,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.0",
+    "@types/webpack-bundle-analyzer": "^4.4.1",
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
@@ -56,6 +59,7 @@
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
     "webpack": "^5.69.1",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.7.4"
   },
