--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "paths": {
-       "*":["./src/*"]
+       "*":["./src/*"],
     },
     "sourceMap": true
   },
@@ -19,5 +19,10 @@
       "compilerOptions": {
           "module": "CommonJS"
       }
-  }
+  },
+  "include": [
+    "./config/jest/setupTests.ts",
+    "./src/**/*.ts",
+    "./src/**/*.tsx"
+  ]
 }
