--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:serv": "webpack serve --env mode=development --env port=5000 --config webpack.config.ts",
+    "start": "npm run build:serv",
+    "build": "webpack --env mode=production --config webpack.config.ts",
     "build:prod": "webpack --env mode=production --config webpack.config.ts",
+    "build:serv": "webpack serve --env mode=development --env port=5000 --config webpack.config.ts",
     "build:dev": "webpack --env mode=development --config webpack.config.ts",
     "build:prod:analyze": "webpack --env analyze=1 --env mode=production --config webpack.config.ts",
     "build:dev:analyze": "webpack --env analyze=1 --env mode=development --config webpack.config.ts",
@@ -13,10 +15,11 @@
     "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
     "lint:scss": "npx stylelint \"**/*.scss\"",
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
-    "start": "npm run build:serv",
-    "test": "jest --config config/jest/jest.config.ts",
+    "test:unit": "jest --config config/jest/jest.config.ts",
+    "test:ui": "npx loki test",
+    "test:ui:ok": "npx loki approve",
     "storybook": "start-storybook -p 6006 -c config/storybook",
-    "build-storybook": "build-storybook -c config/storybook"
+    "storybook:build": "build-storybook -c config/storybook"
   },
   "keywords": [],
   "author": "",
@@ -63,6 +66,7 @@
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
+    "loki": "^0.28.1",
     "mini-css-extract-plugin": "^2.5.3",
     "react-refresh": "^0.12.0",
     "regenerator-runtime": "^0.13.9",
@@ -87,5 +91,20 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.5",
     "react-router-dom": "^6.2.1"
+  },
+  "loki": {
+    "configurations": {
+      "chrome.laptop": {
+        "target": "chrome.docker",
+        "width": 1366,
+        "height": 768,
+        "deviceScaleFactor": 1,
+        "mobile": false
+      },
+      "chrome.iphone7": {
+        "target": "chrome.docker",
+        "preset": "iPhone 7"
+      }
+    }
   }
 }
