--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "test:ui:json": "node scripts/generate-visual-json-report.js",
     "test:ui:html": "reg-cli --from .loki/report.json --report .loki/report.html",
     "storybook": "start-storybook -p 6006 -c config/storybook",
-    "storybook:build": "build-storybook -c config/storybook"
+    "storybook:build": "build-storybook -c config/storybook",
+    "dev:json_server": "npx json-server --watch json-server/db.json --port 8000",
+    "dev:server": "node json-server/index.js"
   },
   "keywords": [],
   "author": "",
