--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "ls": "node -e \"console.log(require('.' + require('path').sep + 'package.json').scripts || {})\"",
     "start": "npm run build:serv",
     "build": "webpack --env mode=production --config webpack.config.ts",
     "build:prod": "webpack --env mode=production --config webpack.config.ts",
@@ -22,7 +23,7 @@
     "test:ui:report": "npm run test:ui:json && npm run test:ui:html",
     "test:ui:json": "node scripts/generate-visual-json-report.js",
     "test:ui:html": "reg-cli --from .loki/report.json --report .loki/report.html",
-    "storybook": "start-storybook -p 6006 -c config/storybook",
+    "storybook:server": "start-storybook -p 6006 -c config/storybook",
     "storybook:build": "build-storybook -c config/storybook",
     "dev:json_server": "npx json-server --watch json-server/db.json --port 8000",
     "dev:server": "node json-server/index.js"
