--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "storybook:server": "start-storybook -p 6006 -c config/storybook",
     "storybook:build": "build-storybook -c config/storybook",
     "dev:json_server": "npx json-server --watch json-server/db.json --port 8000",
-    "dev:server": "node json-server/index.js"
+    "dev:server": "node json-server/index.js",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -71,6 +72,7 @@
     "eslint-plugin-storybook": "^0.6.4",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "json-server": "^0.17.0",
