--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ls": "node -e \"console.log(require('.' + require('path').sep + 'package.json').scripts || {})\"",
     "prepare": "husky install",
     "start": "npm run build:serv",
+    "start:dev": "npx concurrently \"npm start\" \"npm run dev:server\"",
     "build": "webpack --env mode=production --config webpack.config.ts",
     "build:prod": "webpack --env mode=production --config webpack.config.ts",
     "build:serv": "webpack serve --env mode=development --env port=5000 --config webpack.config.ts",
@@ -62,6 +63,7 @@
     "@typescript-eslint/parser": "^5.12.1",
     "babel-loader": "^8.2.3",
     "babel-plugin-i18next-extract": "^0.8.3",
+    "concurrently": "^7.0.0",
     "css-loader": "^6.6.0",
     "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
