--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
   "scripts": {
     "ls": "node -e \"console.log(require('.' + require('path').sep + 'package.json').scripts || {})\"",
     "prepare": "husky install",
-    "start": "npm run build:serv",
-    "start:dev": "npx concurrently \"npm start\" \"npm run dev:server\"",
+    "start": "npm run server:all",
+    "server": "webpack serve --env mode=development --env port=5000 --config webpack.config.ts",
+    "server:all": "npx concurrently \"npm run server\" \"npm run server:json\"",
+    "server:json": "node json-server/index.js",
+    "server:db": "npx json-server --watch json-server/db.json --port 8000",
     "build": "webpack --env mode=production --config webpack.config.ts",
     "build:prod": "webpack --env mode=production --config webpack.config.ts",
-    "build:serv": "webpack serve --env mode=development --env port=5000 --config webpack.config.ts",
     "build:dev": "webpack --env mode=development --config webpack.config.ts",
     "build:prod:analyze": "webpack --env analyze=1 --env mode=production --config webpack.config.ts",
     "build:dev:analyze": "webpack --env analyze=1 --env mode=development --config webpack.config.ts",
+    "lint": "npm run lint:ts && npm run lint:scss",
     "lint:ts": "eslint \"**/*.{ts,tsx}\"",
     "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
     "lint:scss": "npx stylelint \"**/*.scss\"",
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
+    "test": "npm run build && npm run lint && npm run test:ui",
     "test:unit": "jest --config config/jest/jest.config.ts",
     "test:ui": "npx loki test",
     "test:ui:ok": "npx loki approve",
@@ -27,8 +31,7 @@
     "test:ui:html": "reg-cli --from .loki/report.json --report .loki/report.html",
     "storybook:server": "start-storybook -p 6006 -c config/storybook",
     "storybook:build": "build-storybook -c config/storybook",
-    "dev:server:db": "npx json-server --watch json-server/db.json --port 8000",
-    "dev:server": "node json-server/index.js",
+
     "test:all": "npm run build:prod && npm run lint:ts && npm run lint:scss && npm run test:unit && npm run storybook:build && npm run test:ui"
   },
   "keywords": [],
