--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "server": "webpack serve --env mode=development --env port=5000 --config webpack.config.ts",
     "server:all": "npx concurrently \"npm run server\" \"npm run server:json\"",
     "server:json": "node json-server/index.js",
-    "server:db": "npx json-server --watch json-server/db.json --port 8000",
+    "server:db-only": "npx json-server --watch json-server/db.json --port 8000",
     "build": "webpack --env mode=production --config webpack.config.ts",
     "build:prod": "webpack --env mode=production --config webpack.config.ts",
     "build:dev": "webpack --env mode=development --config webpack.config.ts",
