--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.1",
+    "concurrently": "^7.0.0",
     "i18next": "^21.6.11",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
@@ -112,13 +113,10 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.5",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
-    "react-virtualized": "^9.22.3"
+    "react-router-dom": "^6.2.1"
+
   },
-  "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
+
   "loki": {
     "fetchFailIgnore": ".*",
     "configurations": {
