73 роли пользователя админ страница, роли админа, менеджера, забрасываем все в навбар, пофиксил ошибку у сайдбара

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prepare": "husky install",
     "start": "npm run server:all",
     "server": "webpack serve --env mode=development --env port=5000 --config webpack.config.ts",
-    "server:all": "npx concurrently \"npm run server\" \"npm run server:json\"",
+    "server:dev": "webpack serve --env mode=development --env port=5000 --config webpack.config.ts",
+    "server:dev_json": "npx concurrently \"npm run server\" \"npm run server:json\"",
     "server:json": "node json-server/index.js",
     "server:db-only": "npx json-server --watch json-server/db.json --port 8000",
     "build": "webpack --env mode=production --config webpack.config.ts",
