--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
        "*":["./src/*"]
     },
     "sourceMap": true,
-    "strict": true
+    "strict": true,
+    "isolatedModules": true,
   },
   "ts-node": {
       "compilerOptions": {
