--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "paths": {
-       "*":["./src/*"]
+       "@/*":["./src/*"]
     },
     "sourceMap": true,
     "strict": true,
