--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "npm run server:all",
     "server": "webpack serve --env mode=development --env port=5000 --config webpack.config.ts",
     "server:dev": "webpack serve --env mode=development --env port=5000 --config webpack.config.ts",
+    "server:vite": "vite --port 5005",
     "server:dev_json": "npx concurrently \"npm run server\" \"npm run server:json\"",
     "server:json": "node json-server/index.js",
     "server:db-only": "npx json-server --watch json-server/db.json --port 8000",
@@ -68,6 +69,7 @@
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
+    "@vitejs/plugin-react": "^3.0.1",
     "babel-loader": "^8.2.3",
     "babel-plugin-i18next-extract": "^0.8.3",
     "circular-dependency-plugin": "^5.2.2",
@@ -106,6 +108,8 @@
     "ts-morph": "^16.0.0",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
+    "vite": "^4.0.4",
+    "vite-plugin-svgr": "^2.4.0",
     "webpack": "^5.69.1",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.10.0",
