--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "ls": "node -e \"console.log(require('.' + require('path').sep + 'package.json').scripts || {})\"",
     "prepare": "husky install",
-    "start": "npm run server:all",
-    "server": "webpack serve --env mode=development --env port=5000 --config webpack.config.ts",
-    "server:dev": "webpack serve --env mode=development --env port=5000 --config webpack.config.ts",
-    "server:vite": "vite --port 5005",
-    "server:dev_json": "npx concurrently \"npm run server\" \"npm run server:json\"",
-    "server:json": "node json-server/index.js",
+    "start": "npm run start:server:all",
+    "start:server": "webpack serve --env mode=development --env port=5000 --config webpack.config.ts",
+    "start:server:dev": "webpack serve --env mode=development --env port=5000 --config webpack.config.ts",
+    "start:server:vite": "vite --port 5005",
+    "start:server:json": "node json-server/index.js",
+    "start:server:all": "npx concurrently \"npm run server\" \"npm run server:json\"",
     "server:db-only": "npx json-server --watch json-server/db.json --port 8000",
     "build": "webpack --env mode=production --config webpack.config.ts",
     "build:prod": "webpack --env mode=production --config webpack.config.ts",
