--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "ls": "node -e \"console.log(require('.' + require('path').sep + 'package.json').scripts || {})\"",
     "prepare": "husky install",
+    "postinstall": "npx rimraf node_modules/.cache",
     "start": "npm run start:server:all",
     "start:server": "webpack serve --env mode=development --env port=5000 --config webpack.config.ts",
     "start:server:dev": "webpack serve --env mode=development --env port=5000 --config webpack.config.ts",
@@ -99,6 +100,7 @@
     "react-refresh": "^0.12.0",
     "reg-cli": "^0.17.6",
     "regenerator-runtime": "^0.13.9",
+    "rimraf": "^3.0.2",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "storybook-addon-mock": "^2.4.1",
