--- a/.github/workflows/fix.yml
+++ b/.github/workflows/fix.yml
@@ -1,16 +1,27 @@
-name: Branch Fix linting, testing, building
+
+name: linting, testing, building
 on:
   push:
-    branches: [ fix ]
+    branches: [ master ]
   pull_request:
-    branches: [ fix ]
+    branches: [ master ]
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 jobs:
-  pipeline:
+  build-and-ui-testing:
     runs-on: ubuntu-latest
+    concurrency: ci-${{ github.ref }}
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     strategy:
       matrix:
         node-version: [ 17.x ]
-
     steps:
       - uses: actions/checkout@v2
       - name: Staring Node.js ${{ matrix.node-version }}
@@ -18,18 +29,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: install modules
-        run: npm ci
+        run: npm ci --force
       - name: build production project
         run: npm run build:prod
-        if: always()
-      - name: linting typescript
-        run: npm run lint:ts
-        if: always()
-      - name: linting css
-        run: npm run lint:scss
-        if: always()
-      - name: unit testing
-        run: npm run test:unit
         if: always()
       - name: build storybook
         run: npm run storybook:build
@@ -37,13 +39,40 @@ jobs:
       - name: screenshot testing
         run: npm run test:ui:ci
         if: always()
-      - name: make report
+      - name: Generate HTML report
         run: npm run test:ui:report
-        if: failure()
-      - name: save report
-        uses: actions/upload-artifact@v3
+        if: always()
+      - name: Setup Pages
+        uses: actions/configure-pages@v2
+        if: always()
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        if: always()
         with:
-          name: 'loki difference ${{ github.run_number }}'
-          path: .loki/
-          retention-days: 2
-        if: failure()
+          path: '.loki'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        if: always()
+        uses: actions/deploy-pages@v1
+
+  checks:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [ 17.x ]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Staring Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: install modules
+        run: npm ci --force
+      - name: linting typescript
+        run: npm run lint:ts
+        if: always()
+      - name: linting css
+        run: npm run lint:scss
+      - name: unit testing
+        if: always()
+        run: npm run test:unit
