--- a/.github/workflows/fix.yml
+++ b/.github/workflows/fix.yml
@@ -1,10 +1,10 @@
 
-name: linting, testing, building
+name: Fix Actions linting, testing, building
 on:
   push:
-    branches: [ master ]
+    branches: [ fix ]
   pull_request:
-    branches: [ master ]
+    branches: [ fix ]
 permissions:
   contents: write
   pages: write
