114 попилил тест где обновляем данные, поправил профайл, чтобы был в режиме просмотра после загрузки, опять правки по LF,

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,3 +47,5 @@ jobs:
           path: .loki/
           retention-days: 2
         if: failure()
+How are you the article: How are you the article
+send feedback about article: send feedback about article
